add credits to demo page, modify style

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
 				
 				<div class="guide"></div>
 			</div>
-
+			<div class="credits">
+				<a href="http://shakr.com/" class="shakr-logo"><span></span></a>
+				<p>A project of <a href="http://shakr.com/">Shakr</a>. Fork on <a href="https://github.com/ShakrMedia/tuesday">Github</a>.</p>
+			</div>
 		</div>
 
 
