add page subheader, header animation

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 	<body>
 
 		<div id="page">
-			<h1>It's Tuesday.</h1>
+			<h1 class="animated shakrDropInLeft">It's Tuesday.</h1>
+			<p class="subheader">A custom CSS animation library with a bit of a character.</p>
 
 			<div class="container entrances">
-				<h2>Entrances</h3>
+				<h2>Entrances</h2>
 
 				<div class="button-row">
 					<form>
@@ -48,7 +49,7 @@
 			</div>
 
 			<div class="container exits">
-				<h2>Exits</h3>
+				<h2>Exits</h2>
 
 				<div class="button-row">
 					<form>
