add responsive css to demo page

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 		<link rel="stylesheet" type="text/css" href="css/tuesday.css" />
 
 		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	</head>
 
 	<body>
 
 		<div id="page">
-			<h1 class="animated shakrDropInLeft">It's Tuesday.</h1>
-			<p class="subheader">A custom CSS animation library with a bit of a character.</p>
+			<h1 class="animated tdDropInLeft">It's Tuesday.</h1>
+			<p class="subheader">A quirky CSS Animation Library.</p>
 
 			<div class="container entrances">
 				<h2>Entrances</h2>
@@ -24,17 +25,17 @@
 					<form>
 						<select class="animationlist">
 							<optgroup label="DropIn">
-								<option value="shakrDropInLeft">shakrDropInLeft</option>
-								<option value="shakrDropInRight">shakrDropInRight</option>
+								<option value="tdDropInLeft">tdDropInLeft</option>
+								<option value="tdDropInRight">tdDropInRight</option>
 							</optgroup>
 							<optgroup label="FadeIn">
-								<option value="shakrFadeInDown">shakrFadeInDown</option>
-								<option value="shakrFadeInLeft">shakrFadeInLeft</option>
-								<option value="shakrFadeInUp">shakrFadeInUp</option>
-								<option value="shakrFadeInRight">shakrFadeInRight</option>
+								<option value="tdFadeInDown">tdFadeInDown</option>
+								<option value="tdFadeInLeft">tdFadeInLeft</option>
+								<option value="tdFadeInUp">tdFadeInUp</option>
+								<option value="tdFadeInRight">tdFadeInRight</option>
 							</optgroup>
 							<optgroup label="HingeFlip">
-								<option value="shakrHingeFlipIn">shakrHingeFlipIn</option>
+								<option value="tdHingeFlipIn">tdHingeFlipIn</option>
 							</optgroup>
 						</select>
 					
@@ -55,13 +56,13 @@
 					<form>
 						<select class="animationlist">
 							<optgroup label="FadeOut">
-								<option value="shakrFadeOutDown">shakrFadeOutDown</option>
-								<option value="shakrFadeOutLeft">shakrFadeOutLeft</option>
-								<option value="shakrFadeOutUp">shakrFadeOutUp</option>
-								<option value="shakrFadeOutRight">shakrFadeOutRight</option>
+								<option value="tdFadeOutDown">tdFadeOutDown</option>
+								<option value="tdFadeOutLeft">tdFadeOutLeft</option>
+								<option value="tdFadeOutUp">tdFadeOutUp</option>
+								<option value="tdFadeOutRight">tdFadeOutRight</option>
 							</optgroup>
 							<optgroup label="HingeFlip">
-								<option value="shakrHingeFlipOut">shakrHingeFlipOut</option>
+								<option value="tdHingeFlipOut">tdHingeFlipOut</option>
 							</optgroup>
 						</select>
 					
