add basic fades

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 				<div class="button-row">
 					<form>
 						<select class="animationlist">
+							<optgroup label="Basic Fades">
+								<option value="tdFadeIn">tdFadeIn</option>
+							</optgroup>
 							<optgroup label="DropIn">
 								<option value="tdDropInLeft">tdDropInLeft</option>
 								<option value="tdDropInRight">tdDropInRight</option>
@@ -35,7 +38,7 @@
 								<option value="tdFadeInRight">tdFadeInRight</option>
 							</optgroup>
 							<optgroup label="HingeFlip">
-								<option value="tdHingeFlipIn">tdHingeFlipIn</option>
+								<option value="tdHingeFlipIn" selected>tdHingeFlipIn</option>
 							</optgroup>
 						</select>
 					
@@ -55,6 +58,9 @@
 				<div class="button-row">
 					<form>
 						<select class="animationlist">
+							<optgroup label="Basic Fades">
+								<option value="tdFadeOut">tdFadeOut</option>
+							</optgroup>
 							<optgroup label="FadeOut">
 								<option value="tdFadeOutDown">tdFadeOutDown</option>
 								<option value="tdFadeOutLeft">tdFadeOutLeft</option>
@@ -62,7 +68,7 @@
 								<option value="tdFadeOutRight">tdFadeOutRight</option>
 							</optgroup>
 							<optgroup label="HingeFlip">
-								<option value="tdHingeFlipOut">tdHingeFlipOut</option>
+								<option value="tdHingeFlipOut" selected>tdHingeFlipOut</option>
 							</optgroup>
 						</select>
 					
