--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 		<!-- Tuesday Demo Page -->
 		<meta charset="UTF-8"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/tuesday.css" />
+		<link rel="stylesheet" type="text/css" href="build/style.css" />
+		<link rel="stylesheet" type="text/css" href="build/tuesday.css" />
 
 		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
