add Zoom, ZoomBounce animations

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 								<option value="tdDropInLeft">tdDropInLeft</option>
 								<option value="tdDropInRight">tdDropInRight</option>
 							</optgroup>
+							<optgroup label="ZoomIn">
+								<option value="tdZoomIn">tdZoomIn</option>
+								<option value="tdZoomInBounce">tdZoomInBounce</option>
+							</optgroup>
 							<optgroup label="FadeIn">
 								<option value="tdFadeInDown">tdFadeInDown</option>
 								<option value="tdFadeInLeft">tdFadeInLeft</option>
@@ -60,6 +64,10 @@
 						<select class="animationlist">
 							<optgroup label="Basic Fades">
 								<option value="tdFadeOut">tdFadeOut</option>
+							</optgroup>
+							<optgroup label="ZoomOut">
+								<option value="tdZoomOut">tdZoomOut</option>
+								<option value="tdZoomOutBounce">tdZoomOutBounce</option>
 							</optgroup>
 							<optgroup label="FadeOut">
 								<option value="tdFadeOutDown">tdFadeOutDown</option>
