add Swing animations, update README animation listing

--- a/index.html
+++ b/index.html
@@ -24,22 +24,23 @@
 				<div class="button-row">
 					<form>
 						<select class="animationlist">
-							<optgroup label="Basic Fades">
+							<optgroup label="FadeIn">
 								<option value="tdFadeIn">tdFadeIn</option>
-							</optgroup>
-							<optgroup label="DropIn">
-								<option value="tdDropInLeft">tdDropInLeft</option>
-								<option value="tdDropInRight">tdDropInRight</option>
+								<option value="tdFadeInDown">tdFadeInDown</option>
+								<option value="tdFadeInLeft">tdFadeInLeft</option>
+								<option value="tdFadeInUp">tdFadeInUp</option>
+								<option value="tdFadeInRight">tdFadeInRight</option>
 							</optgroup>
 							<optgroup label="ZoomIn">
 								<option value="tdZoomIn">tdZoomIn</option>
 								<option value="tdZoomInBounce">tdZoomInBounce</option>
 							</optgroup>
-							<optgroup label="FadeIn">
-								<option value="tdFadeInDown">tdFadeInDown</option>
-								<option value="tdFadeInLeft">tdFadeInLeft</option>
-								<option value="tdFadeInUp">tdFadeInUp</option>
-								<option value="tdFadeInRight">tdFadeInRight</option>
+							<optgroup label="SwingIn">
+								<option value="tdSwingIn">tdSwingIn</option>
+							</optgroup>
+							<optgroup label="DropIn">
+								<option value="tdDropInLeft">tdDropInLeft</option>
+								<option value="tdDropInRight">tdDropInRight</option>
 							</optgroup>
 							<optgroup label="HingeFlip">
 								<option value="tdHingeFlipIn" selected>tdHingeFlipIn</option>
@@ -62,18 +63,19 @@
 				<div class="button-row">
 					<form>
 						<select class="animationlist">
-							<optgroup label="Basic Fades">
+							<optgroup label="FadeOut">
 								<option value="tdFadeOut">tdFadeOut</option>
+								<option value="tdFadeOutDown">tdFadeOutDown</option>
+								<option value="tdFadeOutLeft">tdFadeOutLeft</option>
+								<option value="tdFadeOutUp">tdFadeOutUp</option>
+								<option value="tdFadeOutRight">tdFadeOutRight</option>
 							</optgroup>
 							<optgroup label="ZoomOut">
 								<option value="tdZoomOut">tdZoomOut</option>
 								<option value="tdZoomOutBounce">tdZoomOutBounce</option>
 							</optgroup>
-							<optgroup label="FadeOut">
-								<option value="tdFadeOutDown">tdFadeOutDown</option>
-								<option value="tdFadeOutLeft">tdFadeOutLeft</option>
-								<option value="tdFadeOutUp">tdFadeOutUp</option>
-								<option value="tdFadeOutRight">tdFadeOutRight</option>
+							<optgroup label="SwingOut">
+								<option value="tdSwingOut">tdSwingOut</option>
 							</optgroup>
 							<optgroup label="HingeFlip">
 								<option value="tdHingeFlipOut" selected>tdHingeFlipOut</option>
