Rename demo page stylesheet name from style.less to demo.less

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 		<!-- Tuesday Demo Page -->
 		<meta charset="UTF-8"/>
-		<link rel="stylesheet" type="text/css" href="build/style.css" />
+		<link rel="stylesheet" type="text/css" href="build/demo.css" />
 		<link rel="stylesheet" type="text/css" href="build/tuesday.css" />
 
 		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
