--- a/index.html
+++ b/index.html
@@ -93,7 +93,21 @@
 				<div class="guide"></div>
 			</div>
 			<div class="credits">
-				<a href="http://shakr.com/" class="shakr-logo"><span></span></a>
+				<a href="http://shakr.com/" class="shakr-logo">
+					<svg version="1.1" viewBox="0 0 800 800">
+						<g id="fills-cut">
+							<path class="wing red" fill="#F15B67" d="M165.8,579.3c-4.8-20.1-6.9-45.9-6.2-68.9c3-108.1,63.9-206.8,144.9-259.1
+								c-2.6-16.3-11.5-29.5-26.9-38.5c-40.4-23.6-87.2,4.8-113.6,51.2c-26.4,46.4-39.6,86.4-43.2,136.4c-5.2,69.8,15.3,137.7,50,192.4
+								C169.6,590.8,167.8,587.7,165.8,579.3z"/>
+							<path class="wing green" fill="#A6CE39" d="M169.1,586.3c0-2.8,0.4-5.6,0.9-8.3c1-5.6,15.6-86.8,83.6-160
+								c60.9-65.3,140.9-104.2,229.8-108.9c11.8-24.5,6.2-46.2-4.2-61.5c-15.2-22-65.2-56-155.6-7.6c-90.4,48.4-160.8,154-164,270.4
+								c-0.7,23,1.3,48.8,6.2,68.9c2.1,8.9,4,11.8,5.2,13.8c0.1,0.1,0.2,0.3,0.3,0.4C169.9,591.5,169.1,589,169.1,586.3z"/>
+							<path class="wing blue" fill="#33A3DC" d="M182.2,599.5c-7.2,0-13.1-5.9-13.1-13.1c0-2.8,0.4-5.6,0.9-8.3
+								c1-5.6,15.6-86.8,83.6-160c83.2-89.2,202-129.1,330.4-100c113.6,25.7,108,103.6,86,137.2c-22.8,34.8-68.8,53-152.8,45.6
+								c-71.6-6.3-136-6.4-214,23.2c-58.1,22.1-88.6,48.4-101.9,61.8c-2,2-7.9,8.2-10.8,10.7c-2.1,1.7-4.9,2.9-8,3L182.2,599.5z"/>
+						</g>
+					</svg>
+				</a>
 				<p>A project of <a href="http://shakr.com/">Shakr</a>. Fork on <a href="https://github.com/ShakrMedia/tuesday">Github</a>.</p>
 			</div>
 		</div>
