Add link to making shakr blog post in demo page, readme

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
 						</g>
 					</svg>
 				</a>
-				<p>A project of <a href="http://shakr.com/">Shakr</a>. Fork on <a href="https://github.com/ShakrMedia/tuesday">Github</a>.</p>
+				<p>A project of <a href="http://preview.shakr.com/">Shakr</a>. Fork on <a href="https://github.com/ShakrMedia/tuesday">Github</a>.</p>
+				<p>Also, take a look on <a href="http://making.shakr.com/making-tuesday/">how we made Tuesday</a>.</p>
 			</div>
 		</div>
 
