Fix links to relative protocols

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="build/demo.css" />
 		<link rel="stylesheet" type="text/css" href="build/tuesday.css" />
 
-		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+		<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	</head>
@@ -93,7 +93,7 @@
 				<div class="guide"></div>
 			</div>
 			<div class="credits">
-				<a href="http://shakr.com/" class="shakr-logo">
+				<a href="//shakr.com/" class="shakr-logo">
 					<svg version="1.1" viewBox="0 0 800 800">
 						<g id="fills-cut">
 							<path class="wing red" fill="#F15B67" d="M165.8,579.3c-4.8-20.1-6.9-45.9-6.2-68.9c3-108.1,63.9-206.8,144.9-259.1
@@ -108,8 +108,8 @@
 						</g>
 					</svg>
 				</a>
-				<p>A project of <a href="http://preview.shakr.com/">Shakr</a>. Fork on <a href="https://github.com/ShakrMedia/tuesday">Github</a>.</p>
-				<p>Also, take a look on <a href="http://making.shakr.com/making-tuesday/">how we made Tuesday</a>.</p>
+				<p>A project of <a href="//preview.shakr.com/">Shakr</a>. Fork on <a href="//github.com/ShakrMedia/tuesday">Github</a>.</p>
+				<p>Also, take a look on <a href="//making.shakr.com/making-tuesday/">how we made Tuesday</a>.</p>
 			</div>
 		</div>
 
