Change animation name of 'Zoom' to 'Expand' and 'Shrink' for a better description of motion, add ShrinkIn/ExpandOut

--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
 								<option value="tdFadeInUp">tdFadeInUp</option>
 								<option value="tdFadeInRight">tdFadeInRight</option>
 							</optgroup>
-							<optgroup label="ZoomIn">
-								<option value="tdZoomIn">tdZoomIn</option>
-								<option value="tdZoomInBounce">tdZoomInBounce</option>
+							<optgroup label="ExpandIn">
+								<option value="tdExpandIn">tdExpandIn</option>
+								<option value="tdExpandInBounce">tdExpandInBounce</option>
+							</optgroup>
+							<optgroup label="ShrinkIn">
+								<option value="tdShrinkIn">tdShrinkIn</option>
+								<option value="tdShrinkInBounce">tdShrinkInBounce</option>
 							</optgroup>
 							<optgroup label="SwingIn">
 								<option value="tdSwingIn">tdSwingIn</option>
@@ -70,9 +74,13 @@
 								<option value="tdFadeOutUp">tdFadeOutUp</option>
 								<option value="tdFadeOutRight">tdFadeOutRight</option>
 							</optgroup>
-							<optgroup label="ZoomOut">
-								<option value="tdZoomOut">tdZoomOut</option>
-								<option value="tdZoomOutBounce">tdZoomOutBounce</option>
+							<optgroup label="ExpandOut">
+								<option value="tdExpandOut">tdExpandOut</option>
+								<option value="tdExpandOutBounce">tdExpandOutBounce</option>
+							</optgroup>
+							<optgroup label="ShrinkOut">
+								<option value="tdShrinkOut">tdShrinkOut</option>
+								<option value="tdShrinkOutBounce">tdShrinkOutBounce</option>
 							</optgroup>
 							<optgroup label="SwingOut">
 								<option value="tdSwingOut">tdSwingOut</option>
