Fix links on demo page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="build/demo.css" />
 		<link rel="stylesheet" type="text/css" href="build/tuesday.css" />
 
-		<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	</head>
@@ -116,8 +116,8 @@
 						</g>
 					</svg>
 				</a>
-				<p>A project of <a href="//preview.shakr.com/">Shakr</a>. Fork on <a href="//github.com/ShakrMedia/tuesday">Github</a>.</p>
-				<p>Also, take a look on <a href="//making.shakr.com/making-tuesday/">how we made Tuesday</a>.</p>
+				<p>A project of <a href="https://www.shakr.com/" target="_blank">Shakr</a>. Fork on <a href="https://github.com/ShakrMedia/tuesday" target="_blank">Github</a>.</p>
+				<p>Also, take a look on <a href="http://making.shakr.com/making-tuesday/" target="_blank">how we made Tuesday</a>.</p>
 			</div>
 		</div>
 
