Add Stamp animation set

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 								<option value="tdShrinkIn">tdShrinkIn</option>
 								<option value="tdShrinkInBounce">tdShrinkInBounce</option>
 							</optgroup>
+							<optgroup label="StampIn">
+								<option value="tdStampIn">tdStampIn</option>
+								<option value="tdStampInSwing">tdStampInSwing</option>
+							</optgroup>
 							<optgroup label="SwingIn">
 								<option value="tdSwingIn">tdSwingIn</option>
 							</optgroup>
