Add Plop animation

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 								<option value="tdDropInLeft">tdDropInLeft</option>
 								<option value="tdDropInRight">tdDropInRight</option>
 							</optgroup>
+							<optgroup label="PlopIn">
+								<option value="tdPlopIn">tdPlopIn</option>
+								<option value="tdPlopInDown">tdPlopInDown</option>
+								<option value="tdPlopInUp">tdPlopInUp</option>
+							</optgroup>
 							<optgroup label="HingeFlip">
 								<option value="tdHingeFlipIn" selected>tdHingeFlipIn</option>
 							</optgroup>
